syntax = "proto3";

message TransferTx {
  int64 seed = 1;
  bytes toWallet = 2;
  int64 sum = 3;
}

message CreateWalletTx {
  int64 initialBalance = 1;
}

message Wallet {
  int64 balance = 1;
}
